# flash-ai

./: .dockerignore  .gitignore  Dockerfile.app  Dockerfile.fe  README.md  api.env.example  db.env.example  docker-compose.yml  justfile  ollama.env.example  pyproject.toml
app/: main.py
app/api/routes/: chat.py  flashcard.py  payroll.py  user.py  vector_db.py
app/core/: config.py
app/database/: db.py  init_db.py
app/exceptions/: http_exceptions.py
app/models/: __init__.py  flashcard.py  payroll.py  user.py
app/schemas/: flashcard.py  payroll.py  user.py
app/scripts/: user_create.py
app/services/: chat.py  chunker.py  flashcard.py  payroll.py  user.py  vector_db.py
frontend/: .cta.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: routeTree.gen.ts  styles.css
frontend/src/components/: AuthButton.tsx  FeatureCard.tsx  FileUploadCard.tsx  Header.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/routes/: __root.tsx  create-deck.tsx  index.tsx  login.tsx  practice.tsx  search.tsx  study.tsx  upload-json.tsx  upload-text.tsx
