[project]
name = "flash-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi-users[sqlalchemy]>=15.0.3",
    "fastapi[standard]>=0.128.0",
    "httpx>=0.28.1",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langchain-postgres>=0.0.16",
    "langgraph>=1.0.7",
    "pgvector>=0.3.6",
    "psycopg2-binary>=2.9.11",
    "psycopg[async,binary]>=3.3.2",
    "python-dateutil>=2.9.0.post0",
    "rust-just>=1.46.0",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]

[tool.uv]
dev-dependencies = ["factory-boy>=3.3.3", "pytest>=9.0.2", "ruff>=0.14.11"]
